# server/src/config/lib/swagger/user.yaml
@@ -24,7 +24,7 @@ paths:
                                 - password
             responses:
                 "200":
-                    description: Successfully logged in the user
+                    description: Successfully loggedIn the user
                     content:
                         application/json:
                             schema:
@@ -50,13 +50,83 @@ paths:
                     description: Internal server error.
 
     /users:
+        post:
+            tags:
+                - User
+            summary: User Create
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                firstName:
+                                    type: string
+                                    description: First name of the user.
+                                    example: john
+                                lastName:
+                                    type: string
+                                    description: Last name of the user.
+                                    example: caprio
+                                profile_id:
+                                    type: string
+                                    description: Profile id of the user.
+                                    example: 123457741
+                                email:
+                                    type: string
+                                    description: The email address of the user.
+                                    example: john.doe@example.com
+                                password:
+                                    type: string
+                                    description: The password of the user.
+                                    example: myPassword123
+                                confirmPassword:
+                                    type: string
+                                    description: Retype password of the user.
+                                    example: myPassword123
+                            required:
+                                - firstName
+                                - lastName
+                                - profile_id
+                                - email
+                                - password
+            responses:
+                "200":
+                    description: Successfully created the user
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    type: object
+                                    properties:
+                                        id:
+                                            type: string
+                                        profile_id:
+                                            type: string
+                                        firstName:
+                                            type: string
+                                        lastName:
+                                            type: string
+                                        email:
+                                            type: string
+                                        created_at:
+                                            type: string
+                                        updated_at:
+                                            type: string
+                "400":
+                    description: Already registered.
+                "500":
+                    description: Internal server error.
+
         get:
             tags:
                 - User
             summary: User list
             responses:
                 "200":
-                    description: Successfully logged in the user
+                    description: Successfully show the users
                     content:
                         application/json:
                             schema:
@@ -79,6 +149,180 @@ paths:
                                         updated_at:
                                             type: string
                 "401":
-                    description: Invalid email or password.
+                    description: Unathenticate User.
+                "500":
+                    description: Internal server error.
+
+        patch:
+            tags:
+                - User
+            summary: User update
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                firstName:
+                                    type: string
+                                    description: First name of the user.
+                                    example: john
+                                lastName:
+                                    type: string
+                                    description: Last name of the user.
+                                    example: caprio
+            responses:
+                "200":
+                    description: Successfully updated the user
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    type: object
+                                    properties:
+                                        id:
+                                            type: string
+                                        profile_id:
+                                            type: string
+                                        firstName:
+                                            type: string
+                                        lastName:
+                                            type: string
+                                        email:
+                                            type: string
+                                        created_at:
+                                            type: string
+                                        updated_at:
+                                            type: string
+                "404":
+                    description: User not found.
+                "500":
+                    description: Internal server error.
+
+    users/logout:
+        post:
+            tags:
+                - User
+            summary: User Logout
+            description: Logout the authenticated user and clear the authentication token cookie.
+            responses:
+                "200":
+                    description: Successfully logged out the user.
+                "401":
+                    description: Unauthorized. The user is not authenticated.
+                "500":
+                    description: Internal server error.
+
+    /users/{id}:
+        delete:
+            tags:
+                - User
+            summary: Delete user
+            parameters:
+                - in: path
+                  name: id
+                  description: ID of the user to be deleted.
+                  required: true
+                  schema:
+                      type: string
+                      example: 123
+            responses:
+                "200":
+                    description: User deleted successfully
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    id:
+                                        type: string
+                                    profile_id:
+                                        type: string
+                                    firstName:
+                                        type: string
+                                    lastName:
+                                        type: string
+                                    email:
+                                        type: string
+                                    created_at:
+                                        type: string
+                                    updated_at:
+                                        type: string
+                "404":
+                    description: User not found.
+                "500":
+                    description: Internal server error.
+        components:
+            schemas:
+                User:
+                    type: object
+                    properties:
+                        id:
+                            type: string
+                            description: ID of the deleted user.
+                            example: 123
+                        firstName:
+                            type: string
+                            description: First name of the deleted user.
+                            example: John
+                        profile_id:
+                            type: string
+                            description: Profile id of the user.
+                            example: 123457741
+                        lastName:
+                            type: string
+                            description: Last name of the deleted user.
+                            example: Doe
+                        email:
+                            type: string
+                            description: Email address of the deleted user.
+                            example: john.doe@example.com
+                        created_at:
+                            type: string
+                            description: Timestamp of when the user was created.
+                            example: "2023-04-12T12:34:56Z"
+                        updated_at:
+                            type: string
+                            description: Timestamp of when the user was last updated.
+                            example: "2023-04-12T12:34:56Z"
+
+        get:
+            tags:
+                - User
+            summary: get a user
+            parameters:
+                - in: path
+                  name: id
+                  description: ID of the user to be get.
+                  required: true
+                  schema:
+                      type: string
+                      example: 123
+            responses:
+                "200":
+                    description: User get successfully
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    id:
+                                        type: string
+                                    profile_id:
+                                        type: string
+                                    firstName:
+                                        type: string
+                                    lastName:
+                                        type: string
+                                    email:
+                                        type: string
+                                    created_at:
+                                        type: string
+                                    updated_at:
+                                        type: string
+                "404":
+                    description: User not found.
                 "500":
                     description: Internal server error.
